tests/rosetta/transpiler/C/9-billion-names-of-god-the-integer.error
compile failed: exit status 1: /tmp/ctranspile1990601982/9-billion-names-of-god-the-integer.mochi.c: In function ‘_mem’:
/tmp/ctranspile1990601982/9-billion-names-of-god-the-integer.mochi.c:75:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   75 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile1990601982/9-billion-names-of-god-the-integer.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile1990601982/9-billion-names-of-god-the-integer.mochi.c: In function ‘cumu’:
/tmp/ctranspile1990601982/9-billion-names-of-god-the-integer.mochi.c:169:8: error: expected identifier or ‘(’ before ‘[’ token
  169 |     int[] **cache = NULL;
      |        ^
/tmp/ctranspile1990601982/9-billion-names-of-god-the-integer.mochi.c:177:24: error: ‘cache’ undeclared (first use in this function)
  177 |             int *val = cache[y - x][minInt(x, y - x)];
      |                        ^~~~~
/tmp/ctranspile1990601982/9-billion-names-of-god-the-integer.mochi.c:177:24: note: each undeclared identifier is reported only once for each function it appears in
/tmp/ctranspile1990601982/9-billion-names-of-god-the-integer.mochi.c:178:86: error: ‘val_len’ undeclared (first use in this function)
  178 |             row = list_append_intptr(row, &row_len, bigAdd(row[row_len - 1], 0, val, val_len));
      |                                                                                      ^~~~~~~
/tmp/ctranspile1990601982/9-billion-names-of-god-the-integer.mochi.c:181:55: warning: passing argument 3 of ‘list_append_intptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  181 |         cache = list_append_intptr(cache, &cache_len, row);
      |                                                       ^~~
      |                                                       |
      |                                                       int **
/tmp/ctranspile1990601982/9-billion-names-of-god-the-integer.mochi.c:46:62: note: expected ‘int *’ but argument is of type ‘int **’
   46 | static int** list_append_intptr(int **arr, size_t *len, int *val) {
      |                                                         ~~~~~^~~

